--- a/gestaoEscolar/templates/gestaoEscolar/gestor/diretor_form.html
+++ b/gestaoEscolar/templates/gestaoEscolar/gestor/diretor_form.html
@@ -18,14 +18,16 @@
 {% block main %}
 
     {% if Tipo_Transacao == 'INS' %}
-        <h2>Cadastrar Diretor</h2> 
+        <h2><b>Cadastrar Diretor</b></h2> 
     {% elif Tipo_Transacao == 'UPD' %}
-        <h2>Atualizar dados do Diretor</h2> 
+        <h2><b>Atualizar dados do Diretor</b></h2> 
     {% endif %}
-
+    
+    <ul class="list-group list-group-flush mb-3 mt-3">
     {% for erro in erros %}
-        {{ erro }}
+        <li class="list-group-item text-danger text-justify">{{ erro|tira_lista }}</li>
     {% endfor %}
+    </ul>
 
     <form action="
             {% if Tipo_Transacao == 'INS' %}
@@ -33,135 +35,149 @@
             {% elif Tipo_Transacao == 'UPD' %}
                 {% url 'diretor_alterar' idGestor %}
             {% endif %}
-        " method="POST">
+        " method="POST" class="form">
         {% csrf_token %}
 
-        <fieldset>
-            <div>
-                <label for="id_Nome">Nome:</label> 
-                <input type="text" name="Nome" maxlength="50" required id="id_Nome" value='{{ gestor_dados.Nome }}'>
+        <fieldset class="container-fluid">
+            <div class="row">
+                <div class="form-group col-md-5">
+                    <label for="id_Nome">Nome:</label> 
+                    <input type="text" name="Nome" maxlength="50" class="form-control" required id="id_Nome" value='{{ gestor_dados.Nome }}'>
+                </div>
+
+                <div class="form-group col-md-3">
+                    <label for="id_Sexo">Sexo:</label> 
+                    <select name="Sexo" id="id_Sexo" class="form-control">
+                        {% for tipo in Tipo_Sexo %}
+                            {% if gestor_dados.Sexo == tipo.0 %}
+                                <option value="{{ tipo.0 }}" selected>{{ tipo.1 }}</option>
+                            {% else %}
+                                <option value="{{ tipo.0 }}" >{{ tipo.1 }}</option>
+                            {% endif %}
+                        {% endfor %}
+                    </select>
+                </div>
+
+                <div class="form-group col-md-4">
+                    <label for="id_Data_Nascimento">Data de Nascimento:</label> 
+                    <input type="date" name="Data_Nascimento" class="form-control" required id="id_Data_Nascimento" value='{{ gestor_dados.Data_Nascimento|data_retorno }}'>
+                </div>
             </div>
 
-            <div>
-                <label for="id_Sexo">Sexo:</label> 
-                <select name="Sexo" id="id_Sexo">
-                    {% for tipo in Tipo_Sexo %}
-                        {% if gestor_dados.Sexo == tipo.0 %}
-                            <option value="{{ tipo.0 }}" selected>{{ tipo.1 }}</option>
-                        {% else %}
-                            <option value="{{ tipo.0 }}" >{{ tipo.1 }}</option>
-                        {% endif %}
-                    {% endfor %}
-                </select>
-            </div>
+            <div class="row">  
+                <div class="form-group col-md-3">
+                    <label for="id_Cpf">CPF:</label> 
+                    <input type="text" name="Cpf" maxlength="11" class="form-control" id="id_Cpf" value='{{ gestor_dados.Cpf }}'>               
+                </div>
 
-            <div>
-                <label for="id_Data_Nascimento">Data de Nascimento:</label> 
-                <input type="date" name="Data_Nascimento" required id="id_Data_Nascimento" value='{{ gestor_dados.Data_Nascimento|data_retorno }}'>
-            </div>
+                <div class="form-group col-md-3">
+                    <label for="id_Rg">RG:</label> 
+                    <input type="text" name="Rg" maxlength="9" class="form-control" id="id_Rg" value='{{ gestor_dados.Rg }}'>                
+                </div>
+                
+                <div class="form-group col-md-3">
+                    <label for="id_Numero1">Telefone 1:</label>
+                    <input type="text" name="Numero1" maxlength="20" class="form-control" required id="id_Numero1" value='{{ telefone_dados.Numero1 }}'>
+                </div>
 
-            <div>
-                <label for="id_Cpf">CPF:</label> 
-                <input type="text" name="Cpf" maxlength="11" id="id_Cpf" value='{{ gestor_dados.Cpf }}'>               
-            </div>
-
-            <div>
-                <label for="id_Rg">RG:</label> 
-                <input type="text" name="Rg" maxlength="9" id="id_Rg" value='{{ gestor_dados.Rg }}'>                
-            </div>
-            
-            <div>
-                <label for="id_Numero1">Telefone 1:</label>
-                <input type="text" name="Numero1" maxlength="20" required id="id_Numero1" value='{{ telefone_dados.Numero1 }}'>
-            </div>
-
-            <div>
-                <label for="id_Numero2">Telefone 2:</label>
-                <input type="text" name="Numero2" maxlength="20" required id="id_Numero2" value='{{ telefone_dados.Numero2 }}'>
-            </div>
-
-        </fieldset>
-
-        <fieldset>
-            <div>
-                <label for="id_Rua">Rua:</label>
-                <input type="text" name="Rua" maxlength="40" required id="id_Rua" value='{{ endereco_dados.Rua }}'>
-            </div>
-
-            <div>
-                <label for="id_Numero">Número:</label>
-                <input type="number" name="Numero" min="0" required id="id_Numero" value='{{ endereco_dados.Numero }}'>
-            </div>
-
-            <div>
-                <label for="id_Bairro">Bairro:</label>
-                <input type="text" name="Bairro" maxlength="40" required id="id_Bairro" value='{{ endereco_dados.Bairro }}'>
-            </div>
-            
-            <div>
-                <label for="id_Cidade">Cidade:</label>
-                <input type="text" name="Cidade" maxlength="40" required id="id_Cidade" value='{{ endereco_dados.Cidade }}'>
-            </div>
-            
-            <div>
-                <label for="id_Estado">Estado:</label>
-                <input type="text" name="Estado" maxlength="2" required id="id_Estado" value='{{ endereco_dados.Estado }}'>
-            </div>
-
-            <div>
-                <label for="id_Complemento">Complemento:</label>
-                <input type="text" name="Complemento" maxlength="100"  id="id_Complemento" value='{{ endereco_dados.Complemento }}'>
-            </div>
-            
-            <div>
-                <label for="id_Zona">Zona:</label>
-                <select name="Zona" id="id_Zona">
-                    {% for zona in zonas %}
-                        {% if endereco_dados.Zona == zona.0 %}
-                            <option value="{{ zona.0 }}" selected>{{ zona.1 }}</option>
-                        {% else %}
-                            <option value="{{ zona.0 }}" >{{ zona.1 }}</option>
-                        {% endif %}
-                    {% endfor %}
-                </select>
+                <div class="form-group col-md-3">
+                    <label for="id_Numero2">Telefone 2:</label>
+                    <input type="text" name="Numero2" maxlength="20" class="form-control" required id="id_Numero2" value='{{ telefone_dados.Numero2 }}'>
+                </div>
             </div>
 
         </fieldset>
 
-        <fieldset>
-            <div>
-                <label for="id_email">Email:</label> 
-                <input type="email" name="email" maxlength="254" required id="id_email" value='{{ usuario_dados.email }}'>     
+        <fieldset class="container-fluid">
+            <div class="row"> 
+                <div class="form-group col-md-5" >
+                    <label for="id_Rua">Rua:</label>
+                    <input type="text" name="Rua" maxlength="40" class="form-control" required id="id_Rua" value='{{ endereco_dados.Rua }}'>
+                </div>
+
+                <div class="form-group col-md-2">
+                    <label for="id_Numero">Número:</label>
+                    <input type="number" name="Numero" min="0" max="99999" class="form-control" required id="id_Numero" value='{{ endereco_dados.Numero }}'>
+                </div>
+
+                <div class="form-group col-md-5">
+                    <label for="id_Bairro">Bairro:</label>
+                    <input type="text" name="Bairro" maxlength="40" class="form-control" required id="id_Bairro" value='{{ endereco_dados.Bairro }}'>
+                </div>
+            </div>   
+
+            <div class="row">  
+                <div class="form-group col-md-4">
+                    <label for="id_Cidade">Cidade:</label>
+                    <input type="text" name="Cidade" maxlength="40" class="form-control" required id="id_Cidade" value='{{ endereco_dados.Cidade }}'>
+                </div>
+                
+                <div class="form-group col-md-1">
+                    <label for="id_Estado">Estado:</label>
+                    <input type="text" name="Estado" maxlength="2" class="form-control" required id="id_Estado" value='{{ endereco_dados.Estado }}'>
+                </div>
+
+                <div class="form-group col-md-5">
+                    <label for="id_Complemento">Complemento:</label>
+                    <input type="text" name="Complemento" maxlength="100" class="form-control" id="id_Complemento" value='{{ endereco_dados.Complemento }}'>
+                </div>
+                
+                <div class="form-group col-md-2">
+                    <label for="id_Zona">Zona:</label>
+                    <select name="Zona" id="id_Zona" class="form-control">
+                        {% for zona in zonas %}
+                            {% if endereco_dados.Zona == zona.0 %}
+                                <option value="{{ zona.0 }}" selected>{{ zona.1 }}</option>
+                            {% else %}
+                                <option value="{{ zona.0 }}" >{{ zona.1 }}</option>
+                            {% endif %}
+                        {% endfor %}
+                    </select>
+                </div>
             </div>
+        </fieldset>
+
+        <fieldset class="container-fluid">
+            <div class="row">  
+                <div class="form-group col-md-6">
+                    <label for="id_email">Email:</label> 
+                    <input type="email" name="email" maxlength="254" class="form-control" required id="id_email" value='{{ usuario_dados.email }}'>     
+                </div>
 
             {% if Tipo_Transacao == 'INS' %}
 
-                <div>
+                <div class="form-group col-md-4">
                     <label for="id_username">Nome de Usuário:</label> 
-                    <input type="text" name="username" maxlength="20" required id="id_username" value='{{ usuario_dados.username }}'> 
+                    <input type="text" name="username" maxlength="20" class="form-control" required id="id_username" value='{{ usuario_dados.username }}'> 
                 </div>
+            </div>
 
-                <div>
+            <div class="row">  
+
+                <div class="form-group col-md-4">
                     <label for="id_password">Senha:</label> 
-                    <input type="password" name="password" maxlength="16" required id="id_password" value='{{ usuario_dados.password }}'>              
+                    <input type="password" name="password" maxlength="16" class="form-control" required id="id_password" value='{{ usuario_dados.password }}'>              
                 </div>
 
-                <div>
+                <div class="form-group col-md-4">
                     <label for="id_password2">Confirme sua Senha:</label> 
-                    <input type="password" name="password2" maxlength="16" required id="id_password2" value='{{ usuario_dados.password2 }}'>              
+                    <input type="password" name="password2" maxlength="16" class="form-control" required id="id_password2" value='{{ usuario_dados.password2 }}'>              
                 </div>
             
             {% else %}
-                <div>
+                <div class="form-group col-md-4">
                     <label for="id_username">Nome de Usuário:</label> 
-                    <input type="text" name="username" maxlength="20" disabled id="id_username" value='{{ usuario_dados.username }}'> 
+                    <input type="text" name="username" maxlength="20" class="form-control" disabled id="id_username" value='{{ nome_usuario }}'> 
                 </div>
             {% endif %}
+
+            </div>
         </fieldset>
 
-        <button type="submit">Salvar</button>
-        <a href="{% url 'gestao_escolar_inicio' %}"> Voltar</a>
-        
+        <br>
+        <button type="submit" class="btn btn-primary">Salvar</button>
+        <a href="{% url 'gestao_escolar_inicio' %}" class="btn btn-secondary"> Voltar</a>
+        <br>
     </form>
 
 {% endblock  %}
